--- a/benchmark/Cargo.toml
+++ b/benchmark/Cargo.toml
@@ -7,8 +7,18 @@ edition = "2018"
 [dependencies]
 
 [dev-dependencies]
-criterion = "0.3"
+criterion = { version = "0.3", features = ["html_reports"] }
+iai = "0.1"
 
 [[bench]]
-name = "benchmark"
+name = "criterion"
 harness = false
+
+[[bench]]
+name = "iai"
+harness = false
+
+[lib]
+bench = false
+
+[features]
